--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "moment": "^2.24.0",
+    "mustache": "^3.0.1",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
